To do: focal for multi-layer objects

--- development version
new function 'select'
new function 'barplot' for RasterLayer objects
new function 'scale' for Raster* objects
changed use of igraph0 to igraph (functions gridDistance and clump)
renamed function 'compare' to 'compareRaster' (to avoid name hiding by the igraph package)
renamed function 'expand' to 'extend' (to avoid name hiding by the Matrix package)
incorporated function 'count' into 'freq' (via the 'value' argument) and 'count' is now hidden as '.count' (to avoid name hiding of count by the plyr package)
new argument 'alignOnly' to projectRaster
new option 'setStatistics=FALSE' for writing to some GDAL files (geoTiff in particular) to suppress writing band statistics (min, max, mean, sd). This is currently not documented. When TRUE, all statistics are written when all the values are in memory, but only min and max are written in other cases, leading to problems in QGIS (reported by Agustin Lobo)
Added argument "gridded=TRUE" for plot(RasterLayer, RasterLayer), to show counts for intervals (suggested by Agustin Lobo)
Fixed bug in sampleRandom with "rowcol=TRUE" (reported by Agustin Lobo)


--- 1-September-2012, version 2.0-12
fixed bug in summary reported by Agustin Lobo
fixed bug in terrain/flowdir reported by Marie Morfin
zlim (argument to plot) did not function properly when used to extend the values range (reported by Bart)
writeRaster now honours the value of the NAvalue argument when writing a ncdf file (requested by Thiago Veloso)
added support for the ncdf4 library
fixed many spelling mistakes in the documentation reported by Phil Heilman
function fourCellsFromXY is now visible.
method 'freq' implemented for 'RasterStackBrick'
new function 'layerize'
function 'reclassify' replaces identical 'reclass' (still available but with deprecation warning) to avoid hiding by  xts::reclass
added arguments to writeRaster to allow for writing layers to individual files

--- 27-June-2012, version 2.0-08